Text wrap on ion select solved, tester id not null

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -54,6 +54,8 @@ $colors: (
 // Material Design only Sass variables can go here
 
 
+  //$alert-md-content-max-height: 400px !default;
+
 
 
 // App Windows Variables
