--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -15,6 +15,8 @@ page-home {
       font-size: 20px !important;
       position: relative;
       top:160px;
+      background-color: #1f80bf;
+      
 
     }
 
@@ -24,6 +26,7 @@ page-home {
       font-size: 20px !important;
       position: relative;
       top:220px;
+      background-color: #1f80bf;
       
     }
 
