--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -5,19 +5,28 @@ page-home {
         width: auto;
         margin: auto;
         display: block;
-        position: relative;
-        top:20px;
+        
       }
 
-    .largeButton{
+    .submitReport{
 
       height: 60px;
       font-size: 20px !important;
       position: relative;
-      top:160px;
+      top:10px;
       background-color: #1f80bf;
       
 
+    }
+
+    .previousReport{
+
+      height: 60px;
+      font-size: 20px !important;
+      position: relative;
+      top:20px;
+      background-color: #1f80bf;
+      
     }
 
     .secondLargeButton{
@@ -25,7 +34,7 @@ page-home {
       height: 60px;
       font-size: 20px !important;
       position: relative;
-      top:220px;
+      top:30px;
       background-color: #1f80bf;
       
     }
