--- a/src/pages/parlour-type/parlour-type.scss
+++ b/src/pages/parlour-type/parlour-type.scss
@@ -4,7 +4,15 @@ page-parlour-type {
 
         max-width: 70% !important;
         
-        
+    }
+
+    ion-list{
+
+        padding-top: 5px;
+    }
+
+    .parlourType{
+        padding-top: 5px;
     }
     
 
