Drop down list items added

--- a/src/pages/previous-reports/previous-reports.scss
+++ b/src/pages/previous-reports/previous-reports.scss
@@ -1,10 +1,10 @@
 page-previous-reports {
 
-    .previousReport{
+    // .previousReport{
 
-        padding-top :5px;
-        background-color:#1f80bf;
+    //     padding-top :5px;
+    //     background-color:#1f80bf;
 
-    }
+    // }
 
 }
