Radio buttons installed

--- a/src/components/report-list/report-list.html
+++ b/src/components/report-list/report-list.html
@@ -7,7 +7,7 @@
 
         <ion-icon item-left name="arrow-forward" *ngIf="report.open==false"></ion-icon>
         <ion-icon item-left name="arrow-down" *ngIf="report.open==true"></ion-icon>
-        {{report.reportNo}}
+        <strong>Report No.</strong> {{report.reportNo}}
 
     </button>
 
