Filter function works, but not functionality.

--- a/src/components/report-list/report-list.html
+++ b/src/components/report-list/report-list.html
@@ -1,3 +1,4 @@
+<ion-searchbar class="searchbar" value="" [(ngModel)]="searchTerm" (ionInput)="setFilteredItems($event)" (ionClear)="resetSearch()"></ion-searchbar>
 
 <ion-list class="accordion-list">
 
