Huge mess of code

--- a/src/components/report-list/report-list.scss
+++ b/src/components/report-list/report-list.scss
@@ -6,6 +6,11 @@ report-list {
     //     background-color:#1f80bf;
 
     // }
+    .spinner-container {
+        width: 100%;
+        text-align: center;
+        padding: 10px;
+      }
     
         .ion-list-header{
 
