--- a/src/components/report-list/report-list.html
+++ b/src/components/report-list/report-list.html
@@ -1,4 +1,8 @@
-<ion-searchbar class="searchbar" value="" [(ngModel)]="searchTerm" (ionInput)="setFilteredItems($event)" (ionClear)="resetSearch()"></ion-searchbar>
+<!-- <ion-searchbar class="searchbar" [(ngModel)]="searchTerm" (ionChange)="setFilteredItems()"></ion-searchbar> -->
+
+<div *ngIf="searching" class="spinner-container">
+  <ion-spinner></ion-spinner>
+</div>
 
 <ion-list class="accordion-list">
 
