Revert and begin again

--- a/src/components/report-list/report-list.html
+++ b/src/components/report-list/report-list.html
@@ -1,4 +1,5 @@
 <!-- <ion-searchbar class="searchbar" [(ngModel)]="searchTerm" (ionChange)="setFilteredItems()"></ion-searchbar> -->
+<ion-searchbar [formControl]="searchControl" [(ngModel)]="searchTerm" (ionChange)="onSearchInput()" ></ion-searchbar>
 
 <div *ngIf="searching" class="spinner-container">
   <ion-spinner></ion-spinner>
