--- a/src/pages/previous-reports/previous-reports.scss
+++ b/src/pages/previous-reports/previous-reports.scss
@@ -6,5 +6,17 @@ page-previous-reports {
     //     background-color:#1f80bf;
 
     // }
+    .spinner-container {
+        width: 100%;
+        text-align: center;
+        padding: 10px;
+      }
+
+     .nodata{
+
+      
+      text-align: center;
+
+     }
 
 }
