--- a/src/components/report-list/report-list.scss
+++ b/src/components/report-list/report-list.scss
@@ -12,30 +12,30 @@ report-list {
         padding: 10px;
       }
     
-        .ion-list-header{
+    //     .ion-list-header{
 
-            margin-bottom: 5px;
+    //         margin-bottom: 5px;
 
-        }
+    //     }
 
-    .accordion-list{
-        background: color($colors,light);
-        height:100%;
-        //background-color: #1f80bf;
-        margin-bottom: 1px;
+    // .accordion-list{
+    //     background: color($colors,light);
+    //     height:100%;
+    //     //background-color: #1f80bf;
+    //     margin-bottom: 1px;
         
-    }
+    // }
 
-    .section-active{
+    // .section-active{
 
-        //background:#1f80bf;
-        //color: white;
-        margin-bottom: 1px;
+    //     //background:#1f80bf;
+    //     //color: white;
+    //     margin-bottom: 1px;
 
-    }
+    // }
 
-    .list{
-        margin-bottom: 4px;
-    }
+    // .list{
+    //     margin-bottom: 4px;
+    // }
 
 }
