--- a/src/pages/previous-reports/previous-reports.scss
+++ b/src/pages/previous-reports/previous-reports.scss
@@ -17,6 +17,31 @@ page-previous-reports {
       
       text-align: center;
 
-     }
+    }
+    .ion-list-header{
+
+      margin-bottom: 5px;
+
+  }
+
+.accordion-list{
+  background: color($colors,light);
+  height:100%;
+  //background-color: #1f80bf;
+  margin-bottom: 1px;
+  
+}
+
+.section-active{
+
+  //background:#1f80bf;
+  //color: white;
+  margin-bottom: 1px;
+
+}
+
+.list{
+  margin-bottom: 4px;
+}
 
 }
